package ru.yandex.practicum.entity;

public enum DeviceType {

    TEMPERATURE_SENSOR, SMART_HEATING_SYSTEM

}
