package ru.yandex.practicum.entity;

public enum NotificationType {

    USER_REGISTRATION, BROKEN_DEVICE, SETUP_DEVICE

}
