@startuml

class User {
  +Uuid id
  +String name
  +Datetime registrationDate
  +List<Device> devices
}

class Device{
    +Uuid id
    +DeviceType deviceType
    +Uuid userId
}

enum DeviceType {
    +String: temperatureSensor
    +String: smartHeatingSystem
}

class SmartHeatingSystem {
  +Uuid id
  +Uuid userId
  +Double lastTemperature
  +Datetime lastUpdated
  +void setTemperature()
}

class HeatingSensor {
  +Uuid id
  +Uuid userId
  +Float currentTemperature
  +Datetime lastUpdated
  +void getTemperature()
}

class Payment {
  +Datetime date
  +Float sum
  +Uuid userId
  +Uuid deviceId
  +DeviceType deviceType
  +void createPayment()
}

class Notification {
  +Uuid id
  +Uuid userId
  +Text message
  +String email
  +NotificationType type
}

enum NotificationType {
  +String userRegistration
  +String brokenDevice
  +String setupDevice
}

User "1" -- "0..*" Device : has
Device "1" -- "1" DeviceType : include
DeviceType "1" -- "1" HeatingSensor : has
DeviceType "1" -- "1" SmartHeatingSystem : has
User "1" -- "0..*" Payment : has
Payment "1" -- "1" DeviceType : include
User "1" -- "0..*" Notification : has
Notification "1" -- "1" NotificationType : include
@enduml
